--- a/main.css
+++ b/main.css
@@ -75,6 +75,7 @@ aside{
     font-size: 2rem;
     background: rgb(82,87,80);
     background: linear-gradient(357deg, rgba(82,87,80,1) 20%, rgba(0,0,0,1) 44%);
+    border-top: bisque solid 5px;
     
 
 }
@@ -270,15 +271,28 @@ main{
    
 
     width: 40rem;
-    height: 55rem;
+    height: 25rem;
     margin: 5rem auto auto auto;
 
   
   
 }
+
+
+.hola img{
+
+
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+
+}
+
 .texto_carusel{
 
-    margin-top: 2rem;
+  
+    text-align: center;
+
 
 }
 
@@ -385,6 +399,7 @@ footer{
 
     justify-content: space-around;
   background-color: black;
+  align-items: center;
 
 }
 
