se crea la pagina de cachorros

--- a/main.css
+++ b/main.css
@@ -136,6 +136,21 @@ header div h1{
 
 }
 
+/* header de la portda de cahorros  */
+.portada_cachorros{
+
+    margin-top: 2rem;
+    width: 100%;
+    height: 20rem;
+}
+
+.portada_cachorros img{
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 /* ----------------PARTE FIN DEL HEADER------------------------ */
 
